# lcms2-feedstock

./: .recipe_maintainers.json  .travis.yml  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_aarch64_.yaml  linux_ppc64le_.yaml  osx_.yaml  osx_64_.yaml  osx_arm64_.yaml  win_.yaml  win_64_.yaml  win_arm64_.yaml  win_c_compilervs2008.yaml  win_c_compilervs2015.yaml  win_c_compilervs2015vc14.yaml
.github/: CODEOWNERS
.scripts/: build_steps.sh  run_osx_build.sh
recipe/: 194-include_io_mingw.patch  CMakeLists.txt  bld.bat  build.sh  build_shared_win.patch  include_io_mingw.patch  meta.yaml  win_jpegturbo.patch
